--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/custom.css" />
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.2.0/mustache.min.js" integrity="sha512-CswfmQmJj8DXhm29Qc5eLk5//2EW1CaI6de+RmRhSrWrXRhkBQ3795tuwJvT6DK6EF4IVqJIRmBg8EokL6c87g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="https://unpkg.com/mustache@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <script src="js/mjml.js"></script>
     <script src="js/blocksdk.js"></script>
     <script src="js/helper.js"></script>
   </head>
-  <body>
+  <body class="container">
     <div id="page1">
-      <h3>Select Asset</h3>
+      <h3 class="text-center">Select Asset</h3>
       <select id="assetDropdownList">
       </select>
       <input type="button" id="p1nxt" class="nxtBtn" value="Next">
     </div>
     <div id="page2">
-        <h3>Configure fields</h3>
-        <div id="p2ErrorMessage"></div>
+        <h3 class="text-center">Configure fields</h3>
+        <div id="p2ErrorMessage" class="alert alert-warning" role="alert"></div>
         <form id="configFields" style="padding: 20px"></form>
         <!--<label for="p2ImageURL">Enter Image URL</label>
         <input type="text" id="p2ImageURL" value=""> -->
@@ -28,7 +31,7 @@
         <input type="button" id="p2nxt" class="nxtBtn" value="Next">
     </div>
     <div id="page3">
-    <h3>Preview Content</h3>
+    <h3 class="text-center">Preview Content</h3>
     <div id="completeMessage">You'll see preview here</div>
     <input type="button" id="p3back" class="backBtn" value="Back">
     <input type="button" id="p3done" class="nxtBtn" value="Complete">
